--- a/slider/build.gradle
+++ b/slider/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.4.0'
     //glide, load image
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile group: 'com.squareup.picasso', name: 'picasso', version: '2.71828'
 }
 
 apply from: 'https://raw.githubusercontent.com/blundell/release-android-library/master/android-release-aar.gradle'
