--- a/slider/build.gradle
+++ b/slider/build.gradle
@@ -7,12 +7,12 @@ ext {
 }
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '26.0.2'
+    compileSdkVersion 28
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 25
+        minSdkVersion 21
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
     }
@@ -25,11 +25,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:25.4.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:appcompat-v7:27.1.0'
     //glide, load image
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile group: 'com.squareup.picasso', name: 'picasso', version: '2.71828'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation group: 'com.squareup.picasso', name: 'picasso', version: '2.71828'
 }
 
 apply from: 'https://raw.githubusercontent.com/blundell/release-android-library/master/android-release-aar.gradle'
